[project]
name = "pynts"
version = "0.1.0"
description = "A light-weight python library to compute tuning scores for neuroscientific data."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.6",
    "opencv-python-headless>=4.11.0.86",
    "pathos>=0.3.4",
    "pynapple>=0.10.1",
    "scikit-image>=0.25.2",
    "statsmodels>=0.14.5",
    "tqdm>=4.67.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
